# trmnl-meeting-room-display

./: .env.example  .gitignore  Cargo.toml  README.md
assets/: setup-logo.xcf
assets/fonts/: LICENSES.txt
src/: bmp.rs  calendar.rs  database.rs  lib.rs  main.rs
src/bmp/: mod.rs
src/database/: mod.rs
src/server/: config.rs  errors.rs  handlers.rs  mod.rs
