[package]
name = "trmnl-meeting-room-display"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
thiserror = "1.0"
image = "0.24"
base64 = "0.21"
rusttype = "0.9"
imageproc = "0.23"
icalendar = "0.15"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
tokio = { version = "1", features = ["full"] }
