[package]
name = "trmnl-meeting-room-display"
version = "0.1.0"
edition = "2024"
default-run = "trmnl-meeting-room-display"

[[bin]]
name = "calendar-cli"
path = "src/bin/calendar_cli.rs"

[dependencies]
actix-web = "4.4"
anyhow = "1.0"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.10"
icalendar = "0.15"
image = "0.24"
imageproc = "0.23"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.29", features = ["bundled"] }
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
